@@ -7,6 +7,8 @@ Version 4.0.12 (2014-01-xx)
 	Fixed bug where the blockquote button text wasn't properly translated since it had the wrong English key.
 	Fixed bug where the importcss plugin didn't import a.class rules properly as selector formats.
 	Fixed bug where the media plugin would override specified dimensions for url pattern matches. Patch contributed by penc.
+	Fixed bug where the autoresize plugin wouldn't take margins into account when calculating the body size. Patch contributed by lepoltj.
+	Fixed bug where the image plugin would throw errors some times on IE 8 when it preloaded the image to get it's dimensions.
 Version 4.0.12 (2013-12-18)
 	Added new media_scripts option to the media plugin. This makes it possible to embed videos using script elements.
 	Fixed bug where WebKit/Blink would produce random span elements and styles when deleting contents inside the editor.
